# AEON

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  DEMO.md  LICENSE  PERFORMANCE-ACCELERATION-PLAN.md  README.md  SECURITY.md  dev-key.pem  eslint.config.js  index.html  main-work.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js  work-tasks.md
.Jules/: palette.md
.github/: dependabot.yml
.github/workflows/: ci.yml  doc-gardening.yml  docs-lint.yml  pages.yml  security.yml  smoke-test.yaml
aot/: Cargo.toml
aot-jit/src/: lib.rs
aot/src/: cfg.rs  disasm.rs  elf.rs  main.rs  translate.rs  wasm_builder.rs
demos/: README.md  serve.js
demos/large/: README.md  claude-demo.html  manifest.json  network_rpc_host.js  serve.js  test-claude-demo-e2e.cjs
demos/medium/: README.md  jit_manager.js  manifest.json  rv2wasm_jit.js  serve.js  service-worker.js
demos/small/: README.md  friscy.js  index.html  manifest.json  network_bridge.js  worker.js
docs/: ARCHITECTURE.md  BUILD.md  BUNDLING.md  DESIGN.md  FRONTEND.md  GEMINI.md  OPTIMIZATION-RAILS.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  SESSION_LOG.md  WORK.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 2026-02-20-overlay-and-browser-apis.md
docs/product-specs/: index.md
friscy-bundle/: app.js  claude-demo.html  index.html  jit_manager.js  manifest.json  network_bridge.js  network_rpc_host.js  overlay.js  serve.js
proxy/: friscy-proxy-linux  go.sum  main.go  proxy_test.go
public/.well-known/: friscy.swbn  manifest.json
public/friscy-bundle/: index.html  network_bridge.js  network_rpc_host.js  overlay.js  sync-client.js
runtime/: CMakeLists.txt  checkpoint.hpp  claude-repl-llrt.js  claude-repl.js  claude-repl.js.inc  elf_loader.hpp  gen-js-inc.sh  library_vectorheart.js  main.cpp  syscalls.hpp  vh_harness.hpp  vh_preload.c
scripts/: doc-gardening.sh  docs-lint.sh  install_pkgs.sh  serve-dist.js  setup_ubuntu.sh  sign-bundle.js
src/: App.tsx  index.css  main.tsx  test-setup.ts  types.d.ts
src/__tests__/: App.test.tsx
src/components/: AppShelf3D.tsx  DesktopLayout.tsx  FuturisticNotepad.tsx  GitArkanoid.tsx  IntroOverlay.tsx  MachineContainer.tsx  ProgressOverlay.tsx  SortableTab.tsx  SupportingView.tsx  TerminalView.tsx  WaveformVisualizer.tsx  WindowFrame.tsx
src/components/__tests__/: ProgressOverlay.test.tsx  WindowFrame.test.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useASR.ts
src/lib/: FriscyMachine.ts  PackageManager.ts
src/lib/__tests__/: FriscyMachine.test.ts
src/types/: emulator.ts
src/workers/: emulator.worker.ts
sync-server/: package.json  server.js
tests/: bench_browser_claude_predictor_modes.sh  bench_browser_node42.sh  bench_browser_phases.sh  check_desktop.mjs  dump-imports.mjs  run_all.sh  run_network_test.sh  test-claude-browser.mjs  test_browser_shell.mjs  test_bundle.sh  test_demos.cjs  test_echo_server_native.sh  test_llrt_fetch.js  test_llrt_hostfetch.cjs  test_mock_stream_service.js  test_runtime.sh  test_rv2wasm.sh  test_synthetic_streaming_workload.js  test_vh_shims.js  verify_boot.js  verify_pause_resume.mjs
tests/mock/: mock_stream_service.js
tools/: Dockerfile.claude  Dockerfile.llrt  Dockerfile.llrt-debian  build-lock.env  build_and_test.sh  friscy-pack  harness.sh  pin_libriscv.sh  runtime_compat_sweep.sh  runtime_source_ref_sweep.sh  setup_native_harness.sh
